fixed link to ear ninja github, navbar collapses after selection, footer svg icons changed to white

--- a/src/App.css
+++ b/src/App.css
@@ -174,6 +174,15 @@
   fill: white;
 }
 
+@media (max-width: 500px) {
+  #footer-icons img {
+    height: 30px;
+    width: 30px;
+    margin: 10px 23px;
+    fill: white;
+  }
+}
+
 .webfonts {
   color: white;
   text-decoration: none;
